@@ -21,4 +21,11 @@
 		<thumb />
 		<action>ActivateWindow(SystemInfo)</action>
 	</shortcut>
+	<shortcut>
+		<label>14111</label>
+		<label2>32034</label2>
+		<icon>UnknownUser.png</icon>
+		<thumb />
+		<action>ActivateWindow(EventLog,events://,return)</action>
+	</shortcut>
 </shortcuts>
