@@ -1,6 +1,7 @@
 v0.6.7
 - Enable 'Get More...' installation of widget providers
 - Return to using json to enable/disable Kodi debug logging
+- Jarvis shortcut changes
 - Cleanup
 
 v0.6.6
